@@ -1,3 +1,7 @@
+Nov 5, 2013
+ * Add proper treatment of coordinates_offset parameter of MDF .h5 files
+ * Remove notebook comments and intermediate testing
+
 Oct 9, 2013
  * Updated .h5 compatibility due to change in MDF .h5 structure
 
